rm width:100% on the ul in header because that was causing spacing issues across the rest of the site

--- a/style.css
+++ b/style.css
@@ -750,13 +750,6 @@ width: 100%;
 	.head-list {
 		flex-direction: column;
 	}
-	.head-list li {
-		width: 100%;
-	}
-	/* .hover-underline:after {
-		width: 85%;
-	} */
-
 	.project-desc {
 		font-size: 3vw;
 	}
